syntax = "proto3";
option java_multiple_files = true;
package ru.senla.task8;

message ToDoRequest {
  string name = 1;
  bool completed = 2;
}

message ToDoRequestById {
  string id = 1;
}

message ToDoUpdateRequestById {
  string id = 1;
  string name = 2;
  bool completed = 3;
}

message ToDoResponse {
  string id = 1;
  string name = 2;
  bool completed = 3;
  string createdOn = 4;
}

message Message {
  string message = 1;
}

service ToDoService {
  rpc getAll(ToDoRequest) returns (stream ToDoResponse) {}
  rpc getById(ToDoRequestById) returns (ToDoResponse) {}
  rpc add(ToDoRequest) returns (ToDoResponse) {}
  rpc update(ToDoUpdateRequestById) returns (ToDoResponse) {}
  rpc delete(ToDoRequestById) returns (Message) {}
}